version 0.4.0
- enables setting of suggestion chips via convention
- changes for new ResponseHandler with assistant-source 0.4.0
  - `PromptStateRequirements` now uses `ApplicationState` instead of `BaseState`.
  - `State.SetupSet` is replaced by `MergedSetupSet` introduced in assistant-source 0.4.0 (see changelog or new scaffolded project)

version 0.3.0
- makes assistant-validations compatible to assistant-source 0.3.0
- changes configuration interface structure
- switches to bunyan for logging, adds comopnent-specific logging
- removes deprecated interfaces (rootInterfaces, ...)
- removes importable PromptState in favor of a PromptStateMixin which has to be applied to one of your own states. As a result, your inheritance structure remains intact.

version 0.2.0
- adds readme
- adds all possible arguments to intent methods
- removes logging if @needs was not used 

version 0.1.1
- bugfix: now passes additional arguments to redirect call

version 0.1.0
- initial release