@@ -1,5 +1,5 @@
 export * from "./components/validations/public-interfaces";
 export { descriptor } from "./components/validations/descriptor";
 export { PromptStateMixin } from "./components/validations/prompt-state-mixin";
-export { needs } from "./components/validations/decorators";
+export * from "./components/validations/decorators";
 export { validationsInjectionNames } from "./components/validations/injection-names";
