@@ -1,4 +1,7 @@
 version 0.4.0
+- renames `@needs` to `@needsEntities`
+- adds `@needsConfirmation` decorator to force confirmation for specific states or intents
+- enables setting the used prompt state via decorator
 - enables setting of suggestion chips via convention
 - changes for new ResponseHandler with assistant-source 0.4.0
   - `PromptStateRequirements` now uses `ApplicationState` instead of `BaseState`.
